--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta property="og:title" content="르탄이 - 프로필 링크" />
         <meta property="og:description" content="어서와 코딩은 처음이지?" />
         <meta property="og:image" content="공유할 이미지" />
-        <title>르탄이 - 프로필 링크</title>
+        <title>솔다손</title>
         <style>
             @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
             * {
@@ -96,10 +96,10 @@
     <body>
         <div class="wrap">
             <div class="profile"></div>
-            <h1 class="main">이거 제목이에요</h1>
-            <p class="sub"></p> 다솔이바보</p>
+            <h1 class="main">바보 다솔아</h1>
+            <p class="sub"></p> 인스타 친구 신청헤 </p>
  
-            <a target="_blank" href="https://www.instagram.com/pers8na/">성지니 인스타(클릭금지)</a>
+            <a target="_blank" href="https://www.instagram.com/pers8na/">성지니 인스타</a>
           
         </div>
 
