--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 border-radius: 90%;
                 border : 2px solid white;
 
-                background-image: url(캡처.PNG);
+                background-image: url(메타몽.jpeg);
                 background-position: center;
                 background-size: cover;
             }
@@ -96,10 +96,10 @@
     <body>
         <div class="wrap">
             <div class="profile"></div>
-            <h1 class="main">바보 다솔아</h1>
-            <p class="sub"></p> 인스타 친구 신청헤 </p>
+            <h1 class="main">애기 다솔아 </h1>
+            <p class="sub"></p> 인스타 친구할까? </p>
  
-            <a target="_blank" href="https://www.instagram.com/pers8na/">성지니 인스타</a>
+            <a target="_blank" href="https://www.instagram.com/pers8na/">성진 인스타</a>
           
         </div>
 
