--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
     <body>
         <div class="wrap">
             <div class="profile"></div>
-            <h1 class="main">애기 다솔아 </h1>
-            <p class="sub"></p> 인스타 친구할까? </p>
+            <h1 class="main">가을전어는 </h1>
+            <p class="sub"></p> 집나간 준범이도 돌아오게하는게 ㄹㅇ임? </p>
  
-            <a target="_blank" href="https://www.instagram.com/pers8na/">성진 인스타</a>
+            <a target="_blank" href="https://www.siksinhot.com/theme/magazine/2469">클릭금지.... 책임못짐</a>
           
         </div>
 
